Finished all games

--- a/ps5/flappy-bird/index.html
+++ b/ps5/flappy-bird/index.html
@@ -136,7 +136,7 @@
 
         /**
          * Bird Textures for different states of the bird (normal, going up, going down).
-         * Some Texures are unused because the PS5 browser not being able to load them fast enough, creating a glitch effect. 
+         * Some Texures are unused because the PS5 browser not being able to load them fast enough, creating a glitch effect 
          */
         const normalBird = new Image()
         normalBird.src = 'assets/bird/yellowbird-midflap.png'     
