--- a/ps5/hangman/index.html
+++ b/ps5/hangman/index.html
@@ -178,11 +178,12 @@
         const urlParams = new URLSearchParams(window.location.search)
         if (urlParams.get('hard'))
             words = [
-                "acquaintance", "benevolent", "catastrophe", "deprecate", "eccentric", "fathom", "garrulous", "haphazard", "impetuous", "juxtapose",
-                "kaleidoscope", "labyrinth", "magnanimous", "nefarious", "obsequious", "paradox", "quintessential", "resilient", "serendipity", "trepidation",
-                "ubiquitous", "vex", "whimsical", "xenophobia", "yearn", "zealous", "abhor", "blatant", "candid", "devious",
-                "eloquent", "fickle", "gregarious", "humble", "impeccable", "jubilant", "keen", "lucid", "meticulous", "nonchalant",
-                "opulent", "pensive", "quixotic", "ravenous", "sanguine", "tenacious", "unassuming", "vibrant", "witty", "zeal"
+                "acquaintance", "benevolent", "catastrophe", "deprecate", "eccentric", "fathom", "garrulous", "haphazard",
+                "impetuous", "juxtapose", "kaleidoscope", "labyrinth", "magnanimous", "nefarious", "obsequious", "paradox",
+                "quintessential", "resilient", "serendipity", "trepidation", "ubiquitous", "vex", "whimsical", "xenophobia",
+                "yearn", "zealous", "abhor", "blatant", "candid", "devious", "eloquent", "fickle", "gregarious", "humble",
+                "impeccable", "jubilant", "keen", "lucid", "meticulous", "nonchalant", "opulent", "pensive", "quixotic",
+                "ravenous", "sanguine", "tenacious", "unassuming", "vibrant", "witty", "zeal"
             ]
 
         if (urlParams.get('timer')) {
