--- a/ps5/index.html
+++ b/ps5/index.html
@@ -257,32 +257,269 @@
                             <h1>Blackjack</h1>
                             <button onclick="window.location.href='blackjack'">Play</button>
                         </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Other games</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Guess The Number</h1>
+                            <button onclick="window.location.href='guess-the-number'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tic-Tac-Toe</h1>
+                            <button onclick="window.location.href='tic-tac-toe'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tic-Tac-Toe with AI</h1>
+                            <button onclick="window.location.href='/ps5/tic-tac-toe/?ai=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tic-Tac-Toe 4x4</h1>
+                            <button onclick="window.location.href='/ps5/tic-tac-toe-multigrid/?grid=4x4'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tic-Tac-Toe 5x5</h1>
+                            <button onclick="window.location.href='/ps5/tic-tac-toe-multigrid/?grid=5x5'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Rock Paper Scissors</h1>
+                            <button onclick="window.location.href='rock-paper-scissors'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Rock Paper Scissors - 2 Players</h1>
+                            <button onclick="window.location.href='/ps5/rock-paper-scissors/?friend=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=letters'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - cars</h1>
+                            <button onclick="window.location.href='/ps5/memory-matching-game/?theme=cars'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - numbers</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=numbers'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - countries</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=countries'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - brands</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=brands'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - animals</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=animals'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - consoles</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=consoles'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - games</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=games'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - continents</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=continents'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - planets</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=planets'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - sports</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=sports'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - colors</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=colors'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - coding</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=programming'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - software</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=software'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - countries++</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=moreCountries'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Memory Matching Game - cars++</h1>
+                            <button
+                                onclick="window.location.href='/ps5/memory-matching-game/?theme=moreCars'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Breakout</h1>
+                            <button onclick="window.location.href='breakout'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Whack-a-Mole</h1>
+                            <button onclick="window.location.href='whack-a-mole'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Connect Four</h1>
+                            <button onclick="window.location.href='connect-four'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Sudoku</h1>
+                            <button onclick="window.location.href='sudoku'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £1</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-1'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £2</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-2'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £0.50p</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-50p'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £0.10p</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-10p'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £0.05p</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-5p'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip £0.01p</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=gbp-1p'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $1</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-1'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $0.50</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-50c'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $0.25</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-25c'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $0.10</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-10c'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $0.05</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-5c'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip $0.01</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=usd-1c'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip RON 0.01</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=1ban'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip RON 0.05</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=5bani'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip RON 0.10</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=10bani'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip RON 0.50</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=50bani'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 1 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=1eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 2 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=2eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.50 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=050eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.20 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=020eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.10 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=010eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.05 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=05eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.02 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=02eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip 0.01 EURO</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=01eur'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coin Flip FrontendTitan</h1>
+                            <button onclick="window.location.href='/ps5/coin-flip/?coin=ft'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coundown Timer Challenge 1 min</h1>
+                            <button onclick="window.location.href='/ps5/ctc/?time=60'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coundown Timer Challenge 2 min</h1>
+                            <button onclick="window.location.href='/ps5/ctc/?time=120'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coundown Timer Challenge 5 min</h1>
+                            <button onclick="window.location.href='/ps5/ctc/?time=300'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Coundown Timer Challenge 10 min</h1>
+                            <button onclick="window.location.href='/ps5/ctc/?time=600'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Color Matching Game</h1>
+                            <button onclick="window.location.href='color-match'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Reaction Time Test</h1>
+                            <button onclick="window.location.href='reaction-time'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Math Game - Simple</h1>
+                            <button onclick="window.location.href='math'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Math Game - Complex</h1>
+                            <button onclick="window.location.href='/ps5/math/?complex=true'">Play</button>
+                        </div>
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <h1>Guess The Number</h1>
-                    <button onclick="window.location.href='guess-the-number'">Play</button>
-                </div>
-                <div class="card">
-                    <h1>Tic-Tac-Toe</h1>
-                    <button onclick="window.location.href='tic-tac-toe'">Play</button>
-                </div>
-                <div class="card">
-                    <h1>Rock Paper Scissors</h1>
-                    <button onclick="window.location.href='rock-paper-scissors'">Play</button>
-                </div>
-                <div class="card">
-                    <h1>Memory Matching Game</h1>
-                    <button onclick="window.location.href='memory-matching-game'">Play</button>
-                </div>
-                <div class="card">
-                    <h1>Breakout</h1>
-                    <button onclick="window.location.href='breakout'">Play</button>
-                </div> -->
             </div>
-    </div>
-    <!-- END point of the website -->
-    </main>
+        </main>
     </div>
 
     <div id="dev-panel-ps5">
@@ -290,7 +527,8 @@
     </div>
 
     <script>
-        /** Don't Worry bro, just because u have found this code don't
+        /** 
+         * Don't Worry bro, just because u have found this code don't
          * mean u can hack me. it's just for my local development server
          * chances are that it might redirect you to a device on your
          * network, but the chances are very slim, depending if you code or not.
@@ -298,7 +536,7 @@
         if (navigator.vendor === "Sony Interactive Entertainment Inc." &&
             navigator.platform === "PlayStation 5") {
             document.getElementById('dev-panel-ps5').style.display = 'block'
-        }
+        };
     </script>
 </body>
 
